NewArchive/7aaaa90d4a2027deb7eb97abb0144803-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:8: error: 'uint16_t' does not name a type
 inline uint16_t OnesComplementSum(uint16_t a, uint16_t b)
        ^
main.cpp:17:8: error: 'uint16_t' does not name a type
 inline uint16_t OnesComplementSum(uint16_t n1,
        ^
main.cpp:27:8: error: 'uint16_t' does not name a type
 inline uint16_t OnesComplementSum(uint16_t n1,
        ^
main.cpp:41:8: error: 'uint16_t' does not name a type
 inline uint16_t OnesComplementSum(const uint8_t* begin, int length)
        ^
